Add missing actions to task list